--- a/style.css
+++ b/style.css
@@ -13,12 +13,12 @@ body {
 }
 
 .container {
-    max-width: 120rem;
+    max-width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 10rem auto 20rem;
+    margin: 10rem auto 10rem;
 }
 
 .page {
